plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.7'
}

group 'br.ufop.tomaz'
version '1.0-SNAPSHOT'

sourceCompatibility = 11
targetCompatibility = 11

javafx {
    version = "12"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.media']
}
applicationDefaultJvmArgs = ["--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
                             "--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED",
                             "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED"
]


repositories {
    mavenCentral()
    jcenter()
}

mainClassName = 'br.ufop.tomaz.Main'

dependencies {
    // https://mvnrepository.com/artifact/com.sun.mail/javax.mail
    compile group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
    // https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core
    compile group: 'org.hibernate.orm', name: 'hibernate-core', version: '6.0.0.Alpha2'
    // https://mvnrepository.com/artifact/com.h2database/h2
    compile group: 'com.h2database', name: 'h2', version: '1.4.199'
    // https://mvnrepository.com/artifact/com.jfoenix/jfoenix
    compile group: 'com.jfoenix', name: 'jfoenix', version: '9.0.8'
    // https://mvnrepository.com/artifact/org.kordamp.ikonli/ikonli-javafx
    compile group: 'org.kordamp.ikonli', name: 'ikonli-javafx', version: '11.3.3'
    // https://mvnrepository.com/artifact/org.kordamp.ikonli/ikonli-fontawesome-pack
    compile group: 'org.kordamp.ikonli', name: 'ikonli-fontawesome-pack', version: '11.3.3'
    // https://mvnrepository.com/artifact/org.controlsfx/controlsfx
    compile group: 'org.controlsfx', name: 'controlsfx', version: '11.0.0'
    // https://mvnrepository.com/artifact/com.omertron/themoviedbapi
    compile group: 'com.omertron', name: 'themoviedbapi', version: '4.3'


    testCompile group: 'junit', name: 'junit', version: '4.12'
}
